# personal-kb-mcp

./: .coverage  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  how_it_works.md  install.sh  knowledge_mcp_ideas.md  pyproject.toml  setup.sh
scripts/: check_ollama.py  migrate_to_postgres.py  test_dry_run.py  test_llm_output.py
src/personal_kb/: __init__.py  __main__.py  config.py  server.py
src/personal_kb/confidence/: __init__.py  decay.py
src/personal_kb/db/: __init__.py  backend.py  connection.py  postgres_backend.py  queries.py  schema.py  sqlite_backend.py
src/personal_kb/graph/: __init__.py  builder.py  enricher.py  planner.py  queries.py
src/personal_kb/ingest/: __init__.py  extractor.py  ingester.py  safety.py
src/personal_kb/llm/: __init__.py  anthropic.py  bedrock.py  ollama.py  provider.py
src/personal_kb/models/: __init__.py  entry.py  search.py  version.py
src/personal_kb/search/: __init__.py  embeddings.py  fts.py  hybrid.py  vector.py
src/personal_kb/store/: __init__.py  knowledge_store.py  version_store.py
src/personal_kb/tools/: formatters.py  kb_ask.py  kb_get.py  kb_ingest.py  kb_maintain.py  kb_search.py  kb_store.py  kb_store_batch.py  kb_summarize.py
tests/: conftest.py  test_server.py
tests/confidence/: test_decay.py
tests/db/: test_connection.py  test_postgres_backend.py  test_queries.py
tests/eval/: baseline.json  conftest.py  corpus.json  metrics.py  queries.json  similarity_map.json  test_baseline.py  test_decay.py  test_graph_hints.py  test_metrics.py  test_ranking.py
tests/graph/: test_builder.py  test_enricher.py  test_planner.py  test_queries.py
tests/ingest/: test_extractor.py  test_ingester.py  test_safety.py
tests/llm/: test_anthropic_llm.py  test_bedrock.py  test_ollama_llm.py  test_provider.py
tests/search/: test_fts.py  test_hybrid.py
tests/store/: test_knowledge_store.py  test_version_store.py
tests/tools/: test_formatters.py  test_kb_ask_tool.py  test_kb_get_tool.py  test_kb_ingest_tool.py  test_kb_maintain_tool.py  test_kb_search_tool.py  test_kb_store_batch_tool.py  test_kb_store_tool.py  test_kb_summarize_tool.py
