[project]
name = "personal-kb"
version = "0.16.0"
description = "Personal Knowledge MCP Server — structured retrieval, knowledge graph, and multi-granularity summaries"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "aiosqlite>=0.21",
    "sqlite-vec>=0.1.6",
    "httpx>=0.28",
    "anthropic>=0.40",
]

[project.scripts]
personal-kb = "personal_kb.__main__:main"

[project.optional-dependencies]
aws = [
    "aws-sdk-bedrock-runtime>=0.3.0",
    "smithy-json @ git+https://github.com/jason-weddington/smithy-python.git@fix/json-control-char-escaping#subdirectory=packages/smithy-json",
]
postgres = [
    "asyncpg>=0.29",
]
safety = [
    "detect-secrets>=1.4",
    "scrubadub>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.14",
    "pre-commit>=4",
    "python-semantic-release>=10.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = ["eval: search quality evaluation tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "N",     # pep8-naming
    "D",     # pydocstyle (Google convention)
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "D"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlite_vec", "sqlite_vec.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["detect_secrets", "detect_secrets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scrubadub", "scrubadub.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["personal_kb.llm.bedrock"]
disallow_subclassing_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["aws_sdk_bedrock_runtime", "aws_sdk_bedrock_runtime.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["smithy_core", "smithy_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["smithy_http", "smithy_http.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["smithy_aws_core", "smithy_aws_core.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["personal_kb"]

[tool.coverage.report]
fail_under = 76

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = "uv lock && git add uv.lock && uv build"
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): v{version}"

[tool.semantic_release.publish]
upload_to_vcs_release = false

[tool.semantic_release.remote]
type = "github"
name = "github"
url = "ssh://git@github.com/jason-weddington/personal-kb-mcp.git"
ignore_token_for_push = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_kb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
